Chapter05/external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
    - ip: 10.244.1.60
    - ip: 10.244.1.59
    - ip: 10.244.2.104
    ports:
    - port: 8080
